# claimed

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  benchmark.yaml  benchmark_geobench.yaml  benchmark_geobench_resize.yaml  benchmark_test.yaml  benchmark_v2_simple.yaml  iterate_study.db  mkdocs.yml  pyproject.toml  run_tests.py  run_tests.sh  setup.cfg  sitemap.xml  tox.ini  versions.json
.github/workflows/: docs-check.yml  docs.yml  pylint.yml  python-package-conda.yml
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/c3/: index.html
0.5.0/cli/: index.html
0.5.0/contributing/: index.html
0.5.0/for_developers/: index.html
0.5.0/getting-started/: index.html
0.5.0/handover/: index.html
0.5.0/iterate2/: index.html
0.5.0/mlflow/: index.html
0.5.0/mlx/: index.html
0.5.0/new_backbone/: index.html
0.5.0/plotting/: index.html
0.5.0/ray/: index.html
0.5.0/repeating_experiments/: index.html
0.5.0/roadmap/: index.html
0.5.0/troubleshooting/: index.html
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/c3/: index.html
0.6.0/cli/: index.html
0.6.0/contributing/: index.html
0.6.0/for_developers/: index.html
0.6.0/getting-started/: index.html
0.6.0/handover/: index.html
0.6.0/iterate2/: index.html
0.6.0/jobcoordinator/: index.html
0.6.0/mlflow/: index.html
0.6.0/mlx/: index.html
0.6.0/new_backbone/: index.html
0.6.0/plotting/: index.html
0.6.0/ray/: index.html
0.6.0/repeating_experiments/: index.html
0.6.0/roadmap/: index.html
0.6.0/search/: search_index.json
0.6.0/troubleshooting/: index.html
benchmark/: .travis.yml  backbone_benchmark.py  benchmark.py  benchmark_ray.py  benchmark_types.py  main.py  mlflow_utils.py  model_fitting.py  plot_tools.py  read_dataset.py  repeat_best_experiment.py  utils.py
benchmark/.github/: CODEOWNERS  CONTRIBUTING.md  SUPPORT.md
benchmark/config_util/: build_geobench_configs.py  geobenchv2_template.yaml
configs/: dofa_large_patch16_224_upernetdecoder_true.yaml  ssl4eos12_resnet50_sentinel2_all_moco_smp_unet_true.yaml
dev/: index.html  sitemap.xml
docs/: cli.md  conf.py  contributing.md  getting-started.md  index.md  jobcoordinator.md  new_backbone.md  ray.md  repeating_experiments.md
src/claimed/components/geo/: pyproject.toml
src/claimed/components/geo/src/: stac_item_operator.py
src/claimed/components/geo/stac/: item_template.json
swin3d/: prithvi_swin3d.py  swin3d.py
tests/: test_benchmark.py  test_build_geobench_configs.py
(+88 files in other folders)
